--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chai-backend",
   "version": "1.0.0",
   "description": "a backend at chai and code channel",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
